--- a/teachers.html
+++ b/teachers.html
@@ -77,7 +77,7 @@
         <!-- Header ends -->
 
         <section class="heading">
-            <h3>our teachers</h3>
+            <h3>Our Teachers</h3>
             <p><a href="home.html">home >></a> teachers</p>
         </section>
 
